--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
             <tr>
                 <td>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-                        <p align="center"><font size="7">Hao Chen<img style="height:75px;" align="top" src="L.jpeg"> </font><br>
+                        <p align="center"><font size="7">Hao Chen<img style="height:75px;" align="top" src="./images/L.jpeg"> </font><br>
                             <a href="http://www.cs.umd.edu/">Department of Computer Science, University of Maryland</a><br>
 
                            
                             Email: chenh@umd.edu<br>
-                            <a href="./hao_cv.pdf">CV &nbsp;</a><a href="https://scholar.google.com/citations?user=6UldNrgAAAAJ&amp;hl=en">Google Scholar</a>&nbsp;&nbsp;<a href="https://github.com/haochen235">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin</a>
+                            <a href="./images/hao_cv.pdf">CV &nbsp;</a><a href="https://scholar.google.com/citations?user=6UldNrgAAAAJ&amp;hl=en">Google Scholar</a>&nbsp;&nbsp;<a href="https://github.com/haochen235">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin</a>
                             <br>
                         </p>
 
@@ -94,7 +94,7 @@
 
     <tr>
         <td width="50%" valign="top" align="center">
-                                 <img src="hg-rcnn.png" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/hg-rcnn.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading><strong>HG-RCNN: Hierarchy graph relation network for object detection </strong> </heading><br>
            <strong>CVPR 2021 Submission </strong> <br>
@@ -105,7 +105,7 @@
 
     <tr>
         <td width="50%" valign="center" align="center">
-                                 <img src="teaser_wide.jpg" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/teaser_wide.jpg" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
             <strong>CVPR 2021 Submission <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
@@ -116,7 +116,7 @@
 
     <tr>
         <td width="50%" valign="top" align="center">
-                                 <img src="sstd.png" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/sstd.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading><strong>Progressive Object Transfer Detection</strong> <a href="https://arxiv.org/abs/2002.04741">[pdf]</a> </heading><br>
            <strong>TIP</strong> <br>
@@ -127,7 +127,7 @@
 
     <tr>
         <td width="50%" valign="top" align="center">
-                                 <img src="lstd.png" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/lstd.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <!-- <p><a href="CHI2019/paper.pdf" id="JPM15"> -->
            <heading><strong>LSTD: A Low-Shot Transfer Detector for Object Detection</strong><a href="https://arxiv.org/abs/1803.01529">&nbsp;[pdf]</a> </heading><br>
