--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <link rel="icon" type="image/png" href="images/seal_icon.png">
         <script type="text/javascript" src="js/hidebib.js"></script>
-        <title>Hao Chen's homepage/title>
-        <meta name="Homepage of Hao Chen (UMD), from University of Maryland, College Park (UMD) HUST,object detection, CS, computer vision" http-equiv="Content-Type" content="Hao Chen's Homepage (UMD), (HUST)">
+        <title>Hao Chen</title>
+        <meta name="Homepage of Hao Chen, from University of Maryland, College Park" http-equiv="Content-Type" content="Hao Chen's Homepage">
         <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic' rel='stylesheet' type='text/css'>
         <!-- Start : Google Analytics Code -->
         <script>
