--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                            
                             Email: chenh@umd.edu<br>
-                            <a href="./images/hao_cv.pdf">CV &nbsp;</a><a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar</a>&nbsp;&nbsp;<a href="https://github.com/haochen235">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin</a>
+                            <a href="./images/hao_cv.pdf">CV &nbsp;</a><a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar</a>&nbsp;&nbsp;<a href="https://github.com/haochen-rye">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin</a>
                             <br>
                         </p>
 
