--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                  <img src="./images/hg-rcnn.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading><strong>HG-RCNN: Hierarchy graph relation network for object detection </strong> </heading><br>
-           <strong>CVPR 2021 Submission </strong> <br>
+           <strong>In Submission </strong> <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -108,7 +108,7 @@
                                  <img src="./images/teaser_wide.jpg" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
-            <strong>CVPR 2021 Submission <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
+            <strong>In Submission <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
