--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 
     <tr>
         <td width="50%" valign="top" align="center">
-                                 <img src="./images/hg-rcnn.png" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/idea-4.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading><strong>HG-RCNN: Hierarchy graph relation network for object detection </strong> </heading><br>
-           <strong>In Submission </strong> <br>
+           <heading><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
+           <strong>Under Preview </strong> <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -108,11 +108,31 @@
                                  <img src="./images/teaser_wide.jpg" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
-            <strong>In Submission <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
+            <strong>Under Preview <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
 
+
+    <tr>
+        <td width="50%" valign="center" align="center">
+                                 <img src="./images/lth-det.png" alt="" width="100%" style="border-style: none">
+                                 <td width="60%" valign="top">
+            <heading><strong>The Lottery Ticket Hypothesis for Object Recognition</strong></heading><br>
+            <strong>Under Preview <a href="https://arxiv.org/abs/2012.04643">[pdf]</a> </strong>   <br>
+     Sharath Girish, Shishira R. Maiya, Kamal Gupta, <strong>Hao Chen</strong>, Larry Davis, Abhinav Shrivastava <br>
+         </td>
+     </tr>
+
+    <tr>
+        <td width="50%" valign="center" align="center">
+                                 <img src="./images/GTA.png" alt="" width="100%" style="border-style: none">
+                                 <td width="60%" valign="top">
+            <heading><strong>GTA: Global Temporal Attention for Video Action Understanding</strong></heading><br>
+            <strong>Under Previewer <a href="https://arxiv.org/abs/2012.08510">[pdf]</a> </strong>   <br>
+            Bo He, Xitong Yang, Zuxuan Wu, <strong>Hao Chen</strong>, Ser-Nam Lim, Abhinav Shrivastava <br>
+         </td>
+     </tr>
 
     <tr>
         <td width="50%" valign="top" align="center">
