--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                  <img src="./images/idea-4.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
-           <strong>Under Preview </strong> <br>
+           <strong>Under Review </strong> <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -108,7 +108,7 @@
                                  <img src="./images/teaser_wide.jpg" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
-            <strong>Under Preview <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
+            <strong>Under Review <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -119,7 +119,7 @@
                                  <img src="./images/lth-det.png" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading><strong>The Lottery Ticket Hypothesis for Object Recognition</strong></heading><br>
-            <strong>Under Preview <a href="https://arxiv.org/abs/2012.04643">[pdf]</a> </strong>   <br>
+            <strong>CVPR 2021 <a href="https://arxiv.org/abs/2012.04643">[pdf]</a> </strong>   <br>
      Sharath Girish, Shishira R. Maiya, Kamal Gupta, <strong>Hao Chen</strong>, Larry Davis, Abhinav Shrivastava <br>
          </td>
      </tr>
@@ -129,7 +129,7 @@
                                  <img src="./images/GTA.png" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading><strong>GTA: Global Temporal Attention for Video Action Understanding</strong></heading><br>
-            <strong>Under Previewer <a href="https://arxiv.org/abs/2012.08510">[pdf]</a> </strong>   <br>
+            <strong>Under Review <a href="https://arxiv.org/abs/2012.08510">[pdf]</a> </strong>   <br>
             Bo He, Xitong Yang, Zuxuan Wu, <strong>Hao Chen</strong>, Ser-Nam Lim, Abhinav Shrivastava <br>
          </td>
      </tr>
