update for NeRV

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     Before that, I got my bachelor's degree from the school of <a href=http://english.oei.hust.edu.cn/>Optical and Electronic Information</a> at HUST as well. <br> <br>
                                     
                                     
-                                    My research interest lies in deep learning and computer vision, particularly for object detection, represetation learrning and video understanding.
+                                    My research interest lies in deep learning and computer vision, particularly for implicit visual representation, efficient architecture design, and object detection.
 
                         </tr>
                     </table>
@@ -94,7 +94,17 @@
 
     <tr>
         <td width="50%" valign="top" align="center">
-                                 <img src="./images/idea-4.pdf" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/nerv.pdf" alt="" width="100%" style="border-style: none">
+                                 <td width="67%" valign="top">
+           <heading><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
+           <strong>NeurIPS 2021 </strong> <br>
+           <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava           <br>
+         </td>
+     </tr>
+
+    <tr>
+        <td width="50%" valign="top" align="center">
+                                 <img src="./images/hr-rcnn.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
            <strong>Under Review </strong> <br>
