--- a/index.html
+++ b/index.html
@@ -88,25 +88,24 @@
 
 
 
-
-<table width="110%" align="center" border="0" cellspacing="10" cellpadding="10">
+<table width="135%" align="left" border="0" cellspacing="5" cellpadding="5">
     <h2>Publications</h2>
 
     <tr>
-        <td width="50%" valign="top" align="center">
+        <td width="55%" valign="top" align="center">
                                  <img src="./images/nerv.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
+           <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
            <strong>NeurIPS 2021 </strong> <br>
            <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava           <br>
          </td>
      </tr>
 
     <tr>
-        <td width="50%" valign="top" align="center">
+        <td width="55%" valign="top" align="center">
                                  <img src="./images/hr-rcnn.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
+           <heading style="color:blue;"><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
            <strong>Under Review </strong> <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
@@ -114,10 +113,10 @@
 
 
     <tr>
-        <td width="50%" valign="center" align="center">
+        <td width="55%" valign="center" align="center">
                                  <img src="./images/teaser_wide.jpg" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
-            <heading><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
+            <heading style="color:blue;"><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
             <strong>Under Review <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
@@ -125,49 +124,49 @@
 
 
     <tr>
-        <td width="50%" valign="center" align="center">
+        <td width="55%" valign="center" align="center">
                                  <img src="./images/lth-det.png" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
-            <heading><strong>The Lottery Ticket Hypothesis for Object Recognition</strong></heading><br>
+            <heading style="color:blue;"><strong>The Lottery Ticket Hypothesis for Object Recognition</strong></heading><br>
             <strong>CVPR 2021 <a href="https://arxiv.org/abs/2012.04643">[pdf]</a> </strong>   <br>
      Sharath Girish, Shishira R. Maiya, Kamal Gupta, <strong>Hao Chen</strong>, Larry Davis, Abhinav Shrivastava <br>
          </td>
      </tr>
 
     <tr>
-        <td width="50%" valign="center" align="center">
+        <td width="55%" valign="center" align="center">
                                  <img src="./images/GTA.png" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
-            <heading><strong>GTA: Global Temporal Attention for Video Action Understanding</strong></heading><br>
+            <heading style="color:blue;"><strong>GTA: Global Temporal Attention for Video Action Understanding</strong></heading><br>
             <strong>Under Review <a href="https://arxiv.org/abs/2012.08510">[pdf]</a> </strong>   <br>
             Bo He, Xitong Yang, Zuxuan Wu, <strong>Hao Chen</strong>, Ser-Nam Lim, Abhinav Shrivastava <br>
          </td>
      </tr>
 
     <tr>
-        <td width="50%" valign="top" align="center">
+        <td width="55%" valign="top" align="center">
                                  <img src="./images/sstd.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading><strong>Progressive Object Transfer Detection</strong> <a href="https://arxiv.org/abs/2002.04741">[pdf]</a> </heading><br>
-           <strong>TIP</strong> <br>
+           <heading style="color:blue;"><strong>Progressive Object Transfer Detection </heading><br>
+           <strong>TIP <a href="https://arxiv.org/abs/2002.04741">[pdf]</a></strong> <br>
            <strong>Hao Chen</strong>, Yali Wang, Guoyou Wang, Xiang Bai, Yu Qiao <br>
          </td>
      </tr>
     
 
     <tr>
-        <td width="50%" valign="top" align="center">
+        <td width="55%" valign="top" align="center">
                                  <img src="./images/lstd.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <!-- <p><a href="CHI2019/paper.pdf" id="JPM15"> -->
-           <heading><strong>LSTD: A Low-Shot Transfer Detector for Object Detection</strong><a href="https://arxiv.org/abs/1803.01529">&nbsp;[pdf]</a> </heading><br>
-           <strong>AAAI 2018 Spotlight</strong>  <br>
+           <heading style="color:blue;"><strong>LSTD: A Low-Shot Transfer Detector for Object Detection </heading><br>
+           <strong>AAAI 2018 Spotlight <a href="https://arxiv.org/abs/1803.01529">&nbsp;[pdf]</a></strong>  <br>
            <strong>Hao Chen</strong>, Yali Wang, Guoyou Wang, Yu Qiao <br>
          </td>
      </tr>
     
 
-     <table width="110%" align="center" border="0" cellspacing="10" cellpadding="10">
+     <table width="120%" align="center" border="0" cellspacing="10" cellpadding="10">
         <h2>Acknowledge</h2>
         I appreciate everyone who  helped me or encouraged me throughout my life, especially  <a href="http://www.cs.umd.edu/~abhinav/">Prof. Abhinav Shrivastava</a>, 
         <a href="https://www.researchgate.net/profile/Guoyou_Wang">Prof. Guoyou Wang</a>, 
