--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <td width="55%" valign="top" align="center">
                                  <img src="./images/nerv.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading style="color:blue;"><strong>NerV: Neural Representations for Videos </strong> </heading><br>
-           <strong>NeurIPS 2021 </strong> <br>
+           <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
+           <strong>NeurIPS 2021 <a href="https://arxiv.org/abs/2110.13903">[pdf]</a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>
            <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -106,7 +106,7 @@
                                  <img src="./images/hr-rcnn.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading style="color:blue;"><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
-           <strong>Under Review </strong> <br>
+           <strong>BMVC 2021 <a href="https://arxiv.org/abs/2110.13892">[pdf]</a> </strong> <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -117,7 +117,7 @@
                                  <img src="./images/teaser_wide.jpg" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading style="color:blue;"><strong>Group Ensemble: Learning an Ensemble of ConvNets in a single ConvNet </strong></heading><br>
-            <strong>Under Review <a href="https://arxiv.org/abs/2007.00649">[pdf]</a> </strong>   <br>
+            <strong>Under Review <a href="https://arxiv.org/abs/2007.00649">[pdf]</a><a href="https://github.com/haochen-rye/ModEnsNet.git">[code]</a> </strong>   <br>
            <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
          </td>
      </tr>
@@ -138,7 +138,7 @@
                                  <img src="./images/GTA.png" alt="" width="100%" style="border-style: none">
                                  <td width="60%" valign="top">
             <heading style="color:blue;"><strong>GTA: Global Temporal Attention for Video Action Understanding</strong></heading><br>
-            <strong>Under Review <a href="https://arxiv.org/abs/2012.08510">[pdf]</a> </strong>   <br>
+            <strong>BMVC 2021 <a href="https://arxiv.org/abs/2012.08510">[pdf]</a> </strong>   <br>
             Bo He, Xitong Yang, Zuxuan Wu, <strong>Hao Chen</strong>, Ser-Nam Lim, Abhinav Shrivastava <br>
          </td>
      </tr>
@@ -162,7 +162,7 @@
             <strong>Hao Chen</strong>, Yali Wang, Guoyou Wang, Yu Qiao  <br>
          </td>
      </tr>
-     
+
 
      <table width="120%" align="center" border="0" cellspacing="10" cellpadding="10">
         <h2>Acknowledge</h2>
@@ -172,8 +172,6 @@
         <a href=http://english.siat.cas.cn/SI2017/IAIT2017/RC1/CPE_20513/Researchers1/201707/t20170727_181385.html> Prof. Yali Wang</a>,
         <a href=http://cloud.eic.hust.edu.cn:8071/~xbai/> Prof. Xiang Bai </a> 
         and all good friends I met at China and the US.
-
-
 
                 </td>
             </tr>
