--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 
     <tr>
         <td width="55%" valign="top" align="center">
+                                 <img src="./images/gnerv_teaser.pdf" alt="" width="100%" style="border-style: none">
+                                 <td width="67%" valign="top">
+           <heading style="color:blue;"><strong>GNeRV: Generalizable Neural Visual Representation with Content-adaptive Embedding </strong> </heading><br>
+           <strong>Under Review</a></strong> <br>
+           <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava           <br>
+         </td>
+     </tr>
+
+    <tr>
+        <td width="55%" valign="top" align="center">
                                  <img src="./images/nerv.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
