update nerv project page

--- a/NeRV/index.html
+++ b/NeRV/index.html
@@ -1,6 +1,13 @@
 
 <!DOCTYPE html>
 <html>
+<style>
+
+p {
+  font-size: 15px;
+}
+
+</style>
 
 <head lang="en">
     <meta charset="UTF-8">
@@ -9,8 +16,7 @@
     <title>NeRV</title>
 
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.">
 
 
 <!--     <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
