--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                                  <td width="67%" valign="top">
            <heading style="color:blue;"><strong>GNeRV: Generalizable Neural Visual Representation with Content-adaptive Embedding </strong> </heading><br>
            <strong>Under Review</a></strong> <br>
-           <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava           <br>
+           <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava          <br> <br> 
+           We propose an novel image-wise neural representation, GNeRV, which combines the generalizability of autoencoders with the simplicity and compactness of implicit representation. It generalizes well on unseen images, and encodes images very fast, 36&times; faster than convolutional autoencoders.
          </td>
      </tr>
 
@@ -105,9 +106,14 @@
         <td width="55%" valign="top" align="center">
                                  <img src="./images/nerv.pdf" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br>
-           <strong>NeurIPS 2021 <a href="https://arxiv.org/abs/2110.13903">[pdf]</a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>
-           <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava           <br>
+           <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br> 
+           <strong>NeurIPS 2021 
+            <a href="https://haochen-rye.github.io/NeRV">[project page]
+            <a href="https://arxiv.org/abs/2110.13903">[pdf]
+            </a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>
+           <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava           <br><br>
+            We propose a novel image-wise neural representation (NeRV) to encodes videos in neural networks, which takes frame index as input and outputs the corresponding RGB image. Compared to image-wise neural representation, NeRV imrpoves encoding speed by 25&times; to 70&times;, decoding speed by 38&times; to 132&times;. And it also shows comparable preformance for visual compression and denoising task.
+
          </td>
      </tr>
 
