--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
 
     <tr>
         <td width="55%" valign="top" align="center">
-                                 <img src="./images/gnerv_teaser.pdf" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/gnerv_teaser.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading style="color:blue;"><strong>GNeRV: Generalizable Neural Visual Representation with Content-adaptive Embedding </strong> </heading><br>
            <strong>Under Review</a></strong> <br>
-           <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava          <br> <br> 
+           <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava          <br><br> 
            We propose an novel image-wise neural representation, GNeRV, which combines the generalizability of autoencoders with the simplicity and compactness of implicit representation. It generalizes well on unseen images, and encodes images very fast, 36&times; faster than convolutional autoencoders.
          </td>
      </tr>
 
     <tr>
         <td width="55%" valign="top" align="center">
-                                 <img src="./images/nerv.pdf" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/nerv.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br> 
            <strong>NeurIPS 2021 
@@ -119,7 +119,7 @@
 
     <tr>
         <td width="55%" valign="top" align="center">
-                                 <img src="./images/hr-rcnn.pdf" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/hr-rcnn.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
            <heading style="color:blue;"><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
            <strong>BMVC 2021 <a href="https://arxiv.org/abs/2110.13892">[pdf]</a> </strong> <br>
