--- a/NeRV/index.html
+++ b/NeRV/index.html
@@ -114,7 +114,7 @@ We propose a novel neural representation for videos (NeRV) which encodes videos 
                     Method overview
                 </h3>
                 <p style="text-align:center;">
-                    <image src="img/archi.pdf" height="280px" >
+                    <image src="img/archi.png" height="280px" >
                 </p>
                 <p class="text-justify">
                     We train a pixel-wise implicit representation to fit video frames.
@@ -123,7 +123,7 @@ We propose a novel neural representation for videos (NeRV) which encodes videos 
                 <h3>
                     Image-wise vs Pixel-wise
                 </h3>
-                <center><image src="img/nerv_teaser.pdf" height="320px"></image> </center> <br>
+                <center><image src="img/nerv_teaser.png" height="320px"></image> </center> <br>
                 <div class="row">
                   <div class="column"><center>
                     <img src="img/siren_bunny.gif" alt="siren" style="width:45%">
@@ -135,15 +135,15 @@ We propose a novel neural representation for videos (NeRV) which encodes videos 
                 <h3>
                     Video compression
                 </h3>
-                <center><image src="img/nerv_compress.pdf" height="240px"></image> </center> <br>
+                <center><image src="img/nerv_compress.png" height="240px"></image> </center> <br>
 
             <p class="text-justify">
             We convert video compression problem to model compression (model pruning, model quantiazation, and weight encoding etc.), and reach comparable bit-distortion performance with other methods. <br>
             </p>
 
                   <div class="column"><center>
-                    <img src="img/uvg_psnr_bpp.pdf" alt="uvg_psnr" style="width:48%">
-                    <img src="img/uvg_ssim_bpp.pdf" alt="uvg_ssim" style="width:50%"></center>
+                    <img src="img/uvg_psnr_bpp.png" alt="uvg_psnr" style="width:48%">
+                    <img src="img/uvg_ssim_bpp.png" alt="uvg_ssim" style="width:50%"></center>
                   </div>
                 <h3>
                     Video denoising
