--- a/object_detection.html
+++ b/object_detection.html
@@ -13,21 +13,25 @@
                 text-decoration:none;
             }
             body,td,th {
+
                 font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
                 font-size: 16px;
                 font-weight: 400
             }
             heading {
+
                 font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
-                font-size: 16px;
+                font-size: 19px;
                 font-weight: 1000
             }
             strong {
+
                 font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
                 font-size: 16px;
                 font-weight: 800
             }
             strongred {
+
                 font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
                 color: 'red' ;
                 font-size: 16px
@@ -45,7 +49,7 @@
                 font-family: 'Titillium Web', Verdana, Helvetica, sans-serif;
                 font-size: 20px;
                 /* font-weight: 300 */
-            }         
+            }                  
         </style>
 
         <link rel="icon" type="image/png" href="images/seal_icon.png">
@@ -93,66 +97,54 @@
                         </tr>
                     </table>
 
-
-
 <table width="105%" align="left" border="0" cellspacing="5" cellpadding="5">
 
-<h2>    
-    <section0>
-        Projects by areas: &nbsp;&nbsp;        
-    </section0>
-    <section1>   
-        <a href="index.html" style="color:red;">  Neural Representation</a> &nbsp;&nbsp;&nbsp;
-    </section1>
-    <section2>   
-        <a href="efficient_archi.html"> Efficent Architecture</a> &nbsp;&nbsp;&nbsp;
-        <a href="object_detection.html">Object Detection</a> &nbsp;&nbsp;&nbsp;
-    </section2>
-    <!-- <a href="blog.html" >Blogs</a> &nbsp;&nbsp; -->
-    <br>
-</h2>
+                        <h2>    
+                            <section0>
+                                Projects by areas: &nbsp;&nbsp;        
+                            </section0>
+                            <section1>   
+                                <a href="index.html" >  Neural Representation</a> &nbsp;&nbsp;&nbsp;
+                            </section1>
+                            <section2>   
+                                <a href="efficient_archi.html" > Efficent Architecture</a> &nbsp;&nbsp;&nbsp;
+                                <a href="object_detection.html" style="color:red;">Object Detection</a> &nbsp;&nbsp;&nbsp;
+                            </section2>
+                            <!-- <a href="blog.html" >Blogs</a> &nbsp;&nbsp; -->
+                            <br>
+                        </h2>
+                        
 
-    <tr>
+     <tr>
         <td width="55%" valign="top" align="center">
-            <img src="https://i.imgur.com/k6OjTFi.jpg" alt="" width="100%" style="border-style: none">
-            <td width="67%" valign="top">
-        <heading style="color:blue;"><strong>HNeRV: Hybrid Neural Representations for Videos </strong> </heading><br>
-        <strong>Under Review</a></strong> <br>
-        <strong>Hao Chen</strong>, Matt Gwilliam, Ser-Nam Lim, Abhinav Shrivastava          <br><br> 
-        We propose hybrid neural representation for videos, HNeRV, which can be leveraged in various visual tasks and reach comprable performance with SOTA emthods, 
-        such as video compression, denoising, inpainting, restoration for unseen frames, and editing completion with few edited frames (10% etc.).        
-        </td>
-    </tr>
-
-    <tr>
-        <td width="55%" valign="top" align="center">
-                                 <img src="./images/gnerv_teaser.png" alt="" width="100%" style="border-style: none">
+                                 <img src="./images/hr-rcnn.png" alt="" width="100%" style="border-style: none">
                                  <td width="67%" valign="top">
-           <heading style="color:blue;"><strong>GNeRV: Generalizable Neural Visual Representation with Content-adaptive Embedding </strong> </heading><br>
-           <strong>Under Review</a></strong> <br>
-           <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava          <br><br> 
-           We propose an image-wise neural representation, GNeRV, which combines the generalizability of autoencoders with the simplicity and compactness of implicit representation. It generalizes well on unseen images, and encodes images very fast, 36&times; faster than convolutional autoencoders.
+           <heading style="color:blue;"><strong>HR-RCNN: Hierarchical Relational Reasoning for Object Detection </strong> </heading><br>
+           <strong>BMVC 2021 <a href="https://arxiv.org/abs/2110.13892">[pdf]</a> </strong> <br>
+           <strong>Hao Chen</strong>, Abhinav Shrivastava           <br>
+         </td>
+     </tr>
+
+     
+    <tr>
+        <td width="55%" valign="center" align="center">
+                                 <img src="./images/sstd.png" alt="" width="100%" style="border-style: none">
+                                 <td width="60%" valign="top">
+            <heading style="color:blue;"><strong>Progressive Object Transfer Detection</strong></heading><br>
+            <strong>TIP <a href="https://arxiv.org/abs/2002.04741">[pdf]</a> </strong>   <br>
+            <strong>Hao Chen</strong>, Yali Wang, Guoyou Wang, Xiang Bai, Yu Qiao  <br>
          </td>
      </tr>
 
     <tr>
-        <td width="55%" valign="top" align="center">
-                                 <img src="./images/nerv.png" alt="" width="100%" style="border-style: none">
-                                 <td width="67%" valign="top">
-           <heading style="color:blue;"><strong>NeRV: Neural Representations for Videos </strong> </heading><br> 
-           <strong>NeurIPS 2021 
-            <a href="https://haochen-rye.github.io/NeRV">[project page]
-            <a href="https://arxiv.org/abs/2110.13903">[pdf]
-            </a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>
-           <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava           <br>
-            We propose a image-wise neural representation (NeRV) to encodes videos in neural networks, 
-            which takes frame index as input and outputs the corresponding RGB image. 
-            NeRV shows good advantage over coordinate-based representation in decoding speed, encoding time and quality, 
-            and perform well in video compression and denoising tasks.
-
+        <td width="55%" valign="center" align="center">
+                                 <img src="./images/lstd.png" alt="" width="100%" style="border-style: none">
+                                 <td width="60%" valign="top">
+            <heading style="color:blue;"><strong>LSTD: A Low-Shot Transfer Detector for Object Detection</strong></heading><br>
+            <strong>AAAI 2018 Spotlight <a href="https://arxiv.org/abs/1803.01529">[pdf]</a> </strong>   <br>
+            <strong>Hao Chen</strong>, Yali Wang, Guoyou Wang, Yu Qiao  <br>
          </td>
      </tr>
-
 
 
      <table width="120%" align="center" border="0" cellspacing="10" cellpadding="10">
