init CNeRV html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                         <p align="center"><font size="7">Hao Chen<img style="height:75px;" align="top" src="./images/L.jpeg"> </font><br>                          
                             Email: chenh@umd.edu<br>
-                            <a href="https://drive.google.com/file/d/1IwJOJ_tMe3lWbO8643ZLwafpzmWA4dAj/view?usp=sharing">CV &nbsp;</a><a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar</a>&nbsp;&nbsp;<a href="https://github.com/haochen-rye">Github</a>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin</a>
+                            <a href="https://drive.google.com/file/d/1IwJOJ_tMe3lWbO8643ZLwafpzmWA4dAj/view?usp=sharing">CV &nbsp; / &nbsp;</a>
+                            <a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar &nbsp; / &nbsp; </a>
+                            <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
+                            <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
                             <br>
                             <a href="http://www.cs.umd.edu/">Department of Computer Science, University of Maryland</a><br>
                         </p>
