--- a/CNeRV/index.html
+++ b/CNeRV/index.html
@@ -108,21 +108,21 @@ p {
                     We propose a <b>content-adpative embedding</b> to introduce <b>internal generalization</b> for video neural representation.
                     As shown in below image, CNeRV shows much better unseen PSNR and matches state-of-the-art seen PSNR, at fast encoding speed.
                     <div class="column"><center>
-                        <img src="img/cnerv_teaser.jp2" style="width:90%">
+                        <img src="img/cnerv_teaser.jpeg" style="width:90%">
                       </div>                    
                 </p>
                 <h3>
                     Method overview
                 </h3>
                 <p style="text-align:center;">
-                    <image src="img/cnerv-archi-bunny-3.jp2" style="width:105%" >
+                    <image src="img/cnerv-archi-bunny-3.jpeg" style="width:105%" >
                 </p>
 
                 <h3>
                     CNeRV architecture
                 </h3>
                 <p style="text-align:center;">
-                    <image src="img/cnerv-fig3.jp2" style="width:80%" >
+                    <image src="img/cnerv-fig3.jpeg" style="width:80%" >
                 </p>
 
                 <h3>
@@ -130,18 +130,18 @@ p {
                 </h3>
                 <p style="text-align:center;">
                     <h4> <center> Unseen frames </center> </h4>
-                    <image src="img/unseen_pred_103_gt_ae_nerv_gnerv_28.43_15.08_35.3.jp2" style="width:105%" >
-                    <image src="img/unseen_pred_144_gt_ae_nerv_gnerv_28.45_22.59_30.13.jp2" style="width:105%" >
-                    <image src="img/unseen_pred_38_gt_ae_nerv_gnerv_28.69_14.11_24.88.jp2" style="width:105%" >                            
-                    <image src="img/unseen_pred_150_gt_ae_nerv_gnerv_23.6_9.21_31.56_full.jp2" style="width:105%"  >                            
+                    <image src="img/unseen_pred_103_gt_ae_nerv_gnerv_28.43_15.08_35.3.jpeg" style="width:105%" >
+                    <image src="img/unseen_pred_144_gt_ae_nerv_gnerv_28.45_22.59_30.13.jpeg" style="width:105%" >
+                    <image src="img/unseen_pred_38_gt_ae_nerv_gnerv_28.69_14.11_24.88.jpeg" style="width:105%" >                            
+                    <image src="img/unseen_pred_150_gt_ae_nerv_gnerv_23.6_9.21_31.56_full.jpeg" style="width:105%"  >                            
                 </p>
 
                 <p style="text-align:center;">
                     <h4> <center> Seen frames </center> </h4>
-                    <image src="img/seen_pred_206_gt_ae_nerv_gnerv_28.61_40.28_40.3.jp2" style="width:105%" >
-                    <image src="img/seen_pred_289_gt_ae_nerv_gnerv_28.52_39.72_39.18.jp2" style="width:105%" >
-                    <image src="img/seen_pred_79_gt_ae_nerv_gnerv_28.24_37.11_37.23.jp2" style="width:105%" >                            
-                    <image src="img/seen_pred_302_gt_ae_nerv_gnerv_23.63_32.5_32.2_full.jp2" style="width:105%"  >                            
+                    <image src="img/seen_pred_206_gt_ae_nerv_gnerv_28.61_40.28_40.3.jpeg" style="width:105%" >
+                    <image src="img/seen_pred_289_gt_ae_nerv_gnerv_28.52_39.72_39.18.jpeg" style="width:105%" >
+                    <image src="img/seen_pred_79_gt_ae_nerv_gnerv_28.24_37.11_37.23.jpeg" style="width:105%" >                            
+                    <image src="img/seen_pred_302_gt_ae_nerv_gnerv_23.63_32.5_32.2_full.jpeg" style="width:105%"  >                            
                 </p>
 
             </div>
