--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ p {
             </h2>
             <h4 class="col-md-12 text-center">
             <ul class="list-inline">
-                <a href="https://drive.google.com/file/d/1IwJOJ_tMe3lWbO8643ZLwafpzmWA4dAj/view?usp=sharing">CV &nbsp; / &nbsp;</a>
+                <a href="images/hao_cv.pdf">CV &nbsp; / &nbsp;</a>
                 <a href="https://scholar.google.com/citations?hl=en&user=1aX65skAAAAJ">Google Scholar &nbsp; / &nbsp; </a>
                 <a href="https://github.com/haochen-rye">Github &nbsp; / &nbsp;</a>
                 <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
@@ -163,7 +163,10 @@ p {
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
             <heading style="color:blue;"><strong>CNeRV: Content-adaptive Neural Representation for Visual Data </strong> </heading><br>
-            <strong>BMVC 2022 (Oral)</a></strong> <br>
+            <strong>BMVC 2022 (Oral)
+                <a href="https://haochen-rye.github.io/CNeRV">[project page]
+                <!-- <a href="TODO">[pdf]  -->
+                </a> </strong> <br>
             <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava       <br style="line-height:125%"> </br>     
             We propose a hybrid video neural representation with content-adaptive embedding to introduce internal generalization.   
                 </p>
@@ -181,7 +184,8 @@ p {
             <strong>NeurIPS 2021 
                 <a href="https://haochen-rye.github.io/NeRV">[project page]
                 <a href="https://arxiv.org/abs/2110.13903">[pdf]
-                </a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>                <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava     <br style="line-height:125%"> </br>    
+                </a><a href="https://github.com/haochen-rye/NeRV.git">[code]</a></strong> <br>          
+            <strong>Hao Chen</strong>, Bo He, Hanyu Wang, Yixuan Ren, Ser-Nam Lim, Abhinav Shrivastava     <br style="line-height:125%"> </br>    
             We propose an image-wise neural representation for videos, which achieves good compression results and fast decoding speed.
             </p>
             </span>
