--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p {
                     <br>
                     <!-- <span style="color:red;"> -->
                     <strong>
-                        I will be on the job market in 2023, please reach out to me if you have any research openings and thanks in advance.  <br>
+                        I am expected to graduate and will be on the job market in 2023, please reach out to me if you have any research openings, and thanks in advance. <br>
                     </strong> 
                     <!-- </span> <br> -->
                     I am currently a 5th &nbsp;Ph.D. student in the department of Computer Science at University of Maryland, College Park, 
