--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p {
                 <a href="https://www.linkedin.com/in/hao-chen-a541b41a2/">Linkedin </a>
                 <br>
             </ul>
-                <a href="http://www.cs.umd.edu/"></font>Department of Computer Science, University of Maryland </a><br>            
+                <!-- <a href="http://www.cs.umd.edu/"></font>Department of Computer Science, University of Maryland </a><br>             -->
             </h4>
         </div>
 
@@ -79,7 +79,7 @@ p {
                     <br>
                     <!-- <span style="color:red;"> -->
                     <strong>
-                        I am expected to graduate and will be on the job market in 2023, please reach out to me if you have any research openings, and thanks in advance. <br>
+                        I am expected to graduate and will be on the job market in 2023, please reach out to me if you have any research openings, and thanks in advance. <br><br>
                     </strong> 
                     <!-- </span> <br> -->
                     I am currently a 5th &nbsp;Ph.D. student in the department of Computer Science at University of Maryland, College Park, 
@@ -154,7 +154,9 @@ p {
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
                 <heading style="color:blue;"><strong>HNeRV: A Hybrid Neural Representation for Videos </strong> </heading><br>
-            <strong>Under Review</a></strong> <br>
+            <strong>Under Review
+                <a href="https://haochen-rye.github.io/HNeRV">[project page]
+            </a></strong> <br>
                 <strong>Hao Chen</strong>, Matt Gwilliam, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
             We propose a hybrid video neural representation and a evenly distributed neural network to improve modeling capacity and introduce internal generalization.   
                 </p>
