--- a/HNeRV/index.html
+++ b/HNeRV/index.html
@@ -105,13 +105,13 @@ p {
                 </h3>
                 <div class="paper" style="float:left; display:inline-block; margin-bottom: 25px;"> 
                     <span style="float:left;width: 50%;">
-                        <img src="img/HNeRV-ICLR-teaser-bottom.pdf" alt="" width="98%" >
+                        <img src="img/HNeRV-ICLR-teaser-bottom.jpg" alt="" width="98%" >
                         <p style="text-align:center;">
                         We propose a <strong>hybrid</strong> video neural representation to store videos in two parts: frame embeddings and a decoder.
                         </p>
                     </span>
                     <span style="float:left;width: 50%;">
-                        <img src="img/hnerv_epoch.pdf" alt="" width="98%" >
+                        <img src="img/hnerv_epoch.jpg" alt="" width="98%" >
                     </span>                                
                 </div>
 
@@ -121,7 +121,7 @@ p {
                     2) HNeRV architecture
                 </h3>
                 <div style="margin-bottom: 25px">
-                <img src="img/HNeRV-ICLR-archi-3.pdf"  width="100%">
+                <img src="img/HNeRV-ICLR-archi-3.jpg"  width="100%">
                 </div>
 
                 <h4 align="center">
@@ -138,7 +138,7 @@ p {
                         </p>
                     </span>
                     <span style="float:left;width: 50%;">
-                        <img src="img/parameter_distribution.pdf" alt="" width="98%" >
+                        <img src="img/parameter_distribution.jpg" alt="" width="98%" >
                     </span>                       
                 </div>
 
@@ -158,7 +158,7 @@ p {
                     4) Video Decoding
                 </h3>
                 <div style="margin-bottom: 25px">
-                <img src="img/decoding_all_wide.pdf" alt="" width="100%" >
+                <img src="img/decoding_all_wide.jpg" alt="" width="100%" >
                 </div>
 
 
@@ -169,8 +169,8 @@ p {
                     Embedding interpolation results
                 </h4>                      
                 <div style="margin-bottom: 25px">
-                <img src="img/bmx-interpolate.pdf" alt="" width="100%" >
-                <img src="img/cameral-interpolate-full.pdf" alt="" width="100%" >
+                <img src="img/bmx-interpolate.jpg" alt="" width="100%" >
+                <img src="img/cameral-interpolate-full.jpg" alt="" width="100%" >
                 </div>
 
                 <h3>
@@ -180,21 +180,21 @@ p {
                     Overall results on UVG dataset
                 </h4>                      
                 <div style="margin-bottom: 25px">
-                <img src="img/hnerv_uvg.pdf" alt="" width="100%" >
+                <img src="img/hnerv_uvg.jpg" alt="" width="100%" >
                 </div>
                 <h4 align="center">
                     Best & owrst cases on UVG dataset
                 </h4>                      
                 <div style="margin-bottom: 25px">
-                <img src="img/hnerv_best_worst.pdf" alt="" width="100%" >
+                <img src="img/hnerv_best_worst.jpg" alt="" width="100%" >
                 </div>
 
                 <h3>
                     6) Video inpainting
                 </h3>
                 <div style="margin-bottom: 25px">
-                <img src="img/inpaint_swan_short.pdf" alt="" width="100%" >
-                <img src="img/cows-inpaint.pdf" alt="" width="100%" >
+                <img src="img/inpaint_swan_short.jpg" alt="" width="100%" >
+                <img src="img/cows-inpaint.jpg" alt="" width="100%" >
                 <p class="text-justify" style="font-size:20px;">
                     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; HNeRV input &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; HNeRV output
                 </p>                
