--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@ p {
                 <p style="float:left; display:block;" >
                 <heading style="color:blue;"><strong>HNeRV: A Hybrid Neural Representation for Videos </strong> </heading><br>
             <strong>Under Review
-                <a href="https://haochen-rye.github.io/HNeRV">[project page]
-            </a></strong> <br>
+                <a href="https://haochen-rye.github.io/HNeRV">[project page]</a>
+                    <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a>
+            </strong> <br>
                 <strong>Hao Chen</strong>, Matt Gwilliam, Ser-Nam Lim, Abhinav Shrivastava         <br style="line-height:125%"> </br>    
             We propose a hybrid video neural representation and a evenly distributed neural network to improve modeling capacity and introduce internal generalization.   
                 </p>
@@ -172,7 +173,7 @@ p {
             <heading style="color:blue;"><strong>CNeRV: Content-adaptive Neural Representation for Visual Data </strong> </heading><br>
             <strong>BMVC 2022 (Oral)
                 <a href="https://haochen-rye.github.io/CNeRV">[project page]
-                <!-- <a href="TODO">[pdf]  -->
+                <a href="http://128.84.21.203/abs/2211.10421">[pdf] 
                 </a> </strong> <br>
             <strong>Hao Chen</strong>, Matt Gwilliam, Bo He, Ser-Nam Lim, Abhinav Shrivastava       <br style="line-height:125%"> </br>     
             We propose a hybrid video neural representation with content-adaptive embedding to introduce internal generalization.   
