update teaser images

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/nvloader_teaser.jpg" alt="" width="100%" >
+                <img src="images/nvloader_speed.png" alt="" width="100%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
@@ -149,7 +149,7 @@ p {
         
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/hnerv_epoch.jpg" alt="" width="100%" >
+                <img src="images/hnerv-teaser.png" alt="" width="100%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
