update teaser images

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img src="images/hypernerv_teaser.png" alt="" width="100%" >
+                <img align="right" src="images/hypernerv_teaser.png" alt="" width="85%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
