--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ p {
                 <font size="+3"> Hao Chen  <img style="height:60px;" align="top" src="./images/L.jpeg"> </font> </br>                 
                 <small>
                     陈 豪 <br> 
-                    Email: chenh@umd.edu <br>
+                    chenh@umd.edu 
                 </small>
 
             </h2>
@@ -117,7 +117,7 @@ p {
 
         <div class="paper" style="float:left; display:inline-block; margin-top: 25px;"> 
             <span style="float:left;width: 40%;">
-                <img align="right" src="images/hypernerv_teaser.png" alt="" width="90%" >
+                <img align="right" src="images/hypernerv_teaser_logx.png" alt="" width="90%" >
             </span>
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
@@ -154,7 +154,7 @@ p {
             <span style="float:right;width: 58%;">
                 <p style="float:left; display:block;" >
                 <heading style="color:blue;"><strong>HNeRV: A Hybrid Neural Representation for Videos </strong> </heading><br>
-            <strong>Under Review
+            <strong>CVPR 2023
                 <a href="https://haochen-rye.github.io/HNeRV">[project page]</a>
                     <a href="https://github.com/haochen-rye/HNeRV.git">[code]</a>
             </strong> <br>
