update hnerv web

--- a/HNeRV/index.html
+++ b/HNeRV/index.html
@@ -53,8 +53,9 @@ p {
             <h2 class="col-md-12 text-center">
                 HNeRV: A Hybrid Neural Representation for Videos</br> 
                 <small>
-                    Under Review
-                </small>
+                     CVPR 2023  &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+                    <a href="https://github.com/haochen-rye/HNeRV"> Code</a>
+                </small>                    
             </h2>
         </div>
         <div class="row">
@@ -65,15 +66,17 @@ p {
                           Hao Chen<sup>1</sup>
                         </a>
                     </li>
-                    Matthew Gwilliam<sup>1</sup>, Ser-Nam Lim,  
+                    Matthew Gwilliam<sup>1</sup>, Ser-Nam Lim<sup>2</sup>,  
                     <li>
                         <a href="http://www.cs.umd.edu/~abhinav/">
                           Abhinav Shrivastava<sup>1</sup>
                         </a>
                     </li>
                 </ul>
-                <sup>1</sup> University of Maryland, College Park 
+                <sup>1</sup> University of Maryland, College Park  &nbsp &nbsp &nbsp
+                <sup>2</sup> Meta AI 
             </div>
+        
         </div>
 
 
@@ -103,21 +106,17 @@ p {
                 <h3>
                     1) HNeRV overview
                 </h3>
-                <div class="paper" style="float:left; display:inline-block; margin-bottom: 25px;"> 
-                    <span style="float:left;width: 50%;">
-                        <img src="img/HNeRV-ICLR-teaser-bottom.jpg" alt="" width="98%" >
-                        <p style="text-align:center;">
-                        We propose a <strong>hybrid</strong> video neural representation to store videos in two parts: frame embeddings and a decoder.
-                        </p>
-                    </span>
-                    <span style="float:left;width: 50%;">
-                        <img src="img/hnerv_epoch.jpg" alt="" width="98%" >
-                    </span>                                
-                </div>
+                <!-- <div class="paper" style="float:left; display:inline-block; margin-bottom: 25px;">  -->
+                    <p align="center">
+                        <img src="img/HNeRV-ICLR-teaser-bottom.jpg" alt="" height="200" >    
+                        <br /> <br />
+                        <img src="img/hnerv_epoch.jpg" alt="" height="250" class="center">
+                    </p>
+                <!-- </div> -->
 
 
 
-                <h3>
+                <h3 >
                     2) HNeRV architecture
                 </h3>
                 <div style="margin-bottom: 25px">
@@ -180,7 +179,7 @@ p {
                     Overall results on UVG dataset
                 </h4>                      
                 <div style="margin-bottom: 25px">
-                <img src="img/hnerv_uvg.jpg" alt="" width="100%" >
+                <img src="img/hnerv_uvg.png" alt="" width="100%" >
                 </div>
                 <h4 align="center">
                     Best & owrst cases on UVG dataset
@@ -190,7 +189,7 @@ p {
                 </div>
 
                 <h3>
-                    6) Video inpainting
+                    7) Video inpainting
                 </h3>
                 <div style="margin-bottom: 25px">
                 <img src="img/inpaint_swan_short.jpg" alt="" width="100%" >
